crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__generation_budget_unlimited.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: budget
---
GenerationBudget {
    max_tokens: 18446744073709551615,
    max_time: None,
    max_memory_bytes: None,
}
