crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__generation_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: cfg
---
GenerationConfig {
    max_tokens: 128,
    stop_sequences: [],
    stop_token_ids: [],
    stream: false,
}
