crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__hardware_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: cfg
---
HardwareConfig {
    num_threads: 0,
    memory_limit_mb: 0,
}
