crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__inference_config_debug_preset_json.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: cfg
---
{
  "sampling": {
    "temperature": 0.0,
    "top_k": 1,
    "top_p": 1.0,
    "repetition_penalty": 1.0,
    "seed": 0
  },
  "generation": {
    "max_tokens": 8,
    "stop_sequences": [],
    "stop_token_ids": [],
    "stream": false
  },
  "hardware": {
    "num_threads": 1,
    "memory_limit_mb": 256
  }
}
