crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__inference_config_quality_preset_json.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: cfg
---
{
  "sampling": {
    "temperature": 0.9,
    "top_k": 100,
    "top_p": 0.95,
    "repetition_penalty": 1.1,
    "seed": null
  },
  "generation": {
    "max_tokens": 256,
    "stop_sequences": [],
    "stop_token_ids": [],
    "stream": false
  },
  "hardware": {
    "num_threads": 0,
    "memory_limit_mb": 0
  }
}
