crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__inference_preset_all_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: presets
---
[
    Fast,
    Balanced,
    Quality,
    Deterministic,
    Debug,
]
