crates/bitnet-inference/tests/snapshots/snapshot_wave30__snapshot_wave30__sampling_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave30.rs
expression: cfg
---
SamplingConfig {
    temperature: 0.7,
    top_k: 50,
    top_p: 0.9,
    repetition_penalty: 1.0,
    seed: None,
}
